# lol-match-crawler

./: Cargo.toml  README.md
src/: crawler.rs  main.rs  util.rs
src/crawler/: errors.rs  mod.rs
src/lol_api/: endpoint.rs  errors.rs  mod.rs
src/lol_api/endpoint/: id.rs  mod.rs  summoner_v4.rs
src/lol_api/services/: match_v4.rs  mod.rs  summoner_v4.rs
