[package]
name = "lol-match-crawler"
version = "0.1.0"
authors = ["Scorch-Dev <scorchdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator="0.6.0"
error-chain="0.12"
reqwest="0.10"
serde="1.0"