[package]
name = "lol-match-crawler"
version = "0.1.0"
authors = ["Scorch-Dev <scorchdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain="0.12"
reqwest={ version = "0.10", features=["blocking", "json"] }
serde = { version = "1.0", features=["derive"] }
chrono = "0.4"