[package]
name = "lol-match-crawler"
version = "0.1.0"
authors = ["Scorch-Dev <scorchdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
error-chain="0.12"
rand="0.7"
reqwest={ version = "0.10", features=["json"] }
serde = { version = "1.0", features=["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
tokio = { version = "0.2", features = ["full"] }